# loom

./: .gitignore  LICENSE  README.md
loom/: Cargo.toml  README.md
loom/adapters/openclaw/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
loom/adapters/openclaw/scripts/: export-extension.mjs
loom/adapters/openclaw/src/: client.test.ts  client.ts  exportExtension.test.ts  index.ts  manifest-contract.test.ts  mapping.test.ts  mapping.ts  openclaw-plugin-sdk.d.ts  outboundMitigation.test.ts  outboundMitigation.ts  package-contract.test.ts  plugin.test.ts  render.test.ts  render.ts  rustWireTypes.ts  types.ts
loom/crates/loom-approval/: Cargo.toml
loom/crates/loom-approval/src/: lib.rs
loom/crates/loom-bridge-http/: Cargo.toml
loom/crates/loom-bridge-http/src/: lib.rs  main.rs
loom/crates/loom-bridge-http/tests/: http_contract.rs
loom/crates/loom-domain/: Cargo.toml
loom/crates/loom-domain/src/model/: authorization.rs  bridge.rs  ids.rs  ingress.rs  mod.rs  outbound.rs  risk.rs  shared.rs  task.rs
loom/crates/loom-harness/: Cargo.toml
loom/crates/loom-harness/src/: lib.rs  support.rs
loom/crates/loom-harness/src/flows/: candidate.rs  capability.rs  control.rs  execution.rs  mod.rs  proposals.rs  resume.rs  semantic_bundle.rs  start.rs  task_change.rs
loom/crates/loom-harness/tests/: first_layer_risk_chain.rs  host_ingress.rs
loom/crates/loom-risk/: Cargo.toml
loom/crates/loom-risk/src/: lib.rs
loom/crates/loom-store/: Cargo.toml
loom/crates/loom-store/src/: lib.rs
loom/crates/loom-store/src/repository/: authorizations.rs  bridge_auth.rs  capabilities.rs  control_surface.rs  events.rs  host_execution.rs  ingress.rs  managed_tasks.rs  mod.rs  outbound.rs  risks.rs  runs.rs  runtime.rs  schema.rs  scopes.rs  semantic_decisions.rs  task_artifacts.rs  windows.rs
loom/crates/loom-store/tests/: outbound_retry.rs  runtime_artifacts.rs
(+101 files in other folders)
