[workspace]
members = [
    "crates/loom-approval",
    "crates/loom-bridge-http",
    "crates/loom-domain",
    "crates/loom-harness",
    "crates/loom-risk",
    "crates/loom-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros", "json"] }
hmac = "0.12.1"
hex = "0.4.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
